Some cleanups for sonar